@@ -2,6 +2,7 @@ package nextstep.ladder;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.IntStream;
 import org.junit.jupiter.api.DisplayName;
@@ -34,7 +35,7 @@ class LineTest {
   @Test
   @DisplayName("현재 위치에서 오른쪽 연결이 있으면 오른쪽으로 이동한다.")
   void moveRight() {
-    Line line = new Line(List.of(true, false));
+    Line line = new Line(Arrays.asList(true, false));
 
     int moved = line.move(0);  // index 0에서 오른쪽 true
     assertThat(moved).isEqualTo(1);
@@ -43,7 +44,7 @@ class LineTest {
   @Test
   @DisplayName("현재 위치에서 왼쪽 연결이 있으면 왼쪽으로 이동한다.")
   void moveLeft() {
-    Line line = new Line(List.of(true, false));
+    Line line = new Line(Arrays.asList(true, false));
 
     int moved = line.move(1);  // index 1에서 왼쪽 true
     assertThat(moved).isEqualTo(0);
@@ -52,7 +53,7 @@ class LineTest {
   @Test
   @DisplayName("양쪽 연결이 없으면 이동하지 않는다.")
   void stayStill() {
-    Line line = new Line(List.of(false, false));
+    Line line = new Line(Arrays.asList(false, false));
 
     assertThat(line.move(0)).isEqualTo(0);
     assertThat(line.move(1)).isEqualTo(1);
